js262/test/language/expressions/assignmenttargettype/direct-primaryexpression-classexpression.js


/*---
description: PrimaryExpression ClassExpression; Return invalid. (Direct assignment)
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Direct assignment
---*/

$DONOTEVALUATE();

class {} = 1;
